--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=DynaPuff:wght@400..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Host+Grotesk:wght@400..700&display=swap');
 @import "tailwindcss";
 
 
@@ -14,6 +15,6 @@ body {
   height: 100%;
   background-image: url('/src/assets/stelleBackground.webp');
   
-  font-family: 'DynaPuff', sans-serif;
+  font-family: 'Host Grotesk', sans-serif;
 
 }
